Closed Bug 1380493 Opened 7 years ago Closed 7 years ago

DrawTargetCapture doesn't always draw text with subpixel AA

Categories

(Core :: Graphics, defect)

x86
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: mchang, Assigned: mchang)

References

Details

Attachments

(2 files)

Attached file Small test case
Nightly has subpixel AA, OMTP doesn't.
Interestingly, this is specifically related to the pink background and the text here.
Sometimes we depend on the surface format to be R8G8B8X8 to enable subpixel AA. DrawTargetCapture never initialized the surface format, so sometimes we'd disable it.
Attachment #8886360 - Flags: review?(dvander)
Attachment #8886360 - Flags: review?(dvander) → review+
Pushed by mchang@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c9383f068d67
Set surface format of DrawTargetCapture to whatever the ref DT is. r=dvander
https://hg.mozilla.org/mozilla-central/rev/c9383f068d67
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: