Bug 1380493 Set surface format of DrawTargetCapture to whatever the ref DT is. r=dvander